[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "runserver:start"
formatter = "runserver:formatter"
check = "runserver:check"

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
